[workspace]
members = [
    "common/os-ext",
    "common/scope-exit",
    "sekka",
    "snowflake",
    "snowflake-actions",
    "snowflake-core",
    "snowflake-util",
]

[workspace.dependencies.anyhow]
version = "^1.0.57"

[workspace.dependencies.bitflags]
version = "^1.3.2"

[workspace.dependencies.blake3_c_rust_bindings]
git = "https://github.com/BLAKE3-team/BLAKE3"
rev = "1.3.1"

[workspace.dependencies.iced-x86]
# Don't need most of its features.
default-features = false
features = [ "code_asm", "decoder", "nasm", "std" ]
version = "^1.17.0"

[workspace.dependencies.libc]
version = "~0.2.125"

[workspace.dependencies.regex]
# Don't need Unicode support.
default-features = false
features = [ "perf", "std" ]
version = "^1.5.6"

[workspace.dependencies.thiserror]
version = "^1.0.31"

[workspace.dependencies.typed-arena]
version = "^2.0.1"
