[workspace]
members = [
    "common/os-ext",
    "common/scope-exit",
    "snowflake",
    "snowflake-actions",
    "snowflake-core",
    "snowflake-util",
]

[workspace.dependencies.anyhow]
version = "^1.0.57"

[workspace.dependencies.bitflags]
version = "^1.3.2"

[workspace.dependencies.blake3_c_rust_bindings]
git = "https://github.com/BLAKE3-team/BLAKE3"
rev = "1.3.1"

[workspace.dependencies.libc]
version = "~0.2.125"

[workspace.dependencies.regex]
# Don't need Unicode support.
default-features = false
features = [ "perf", "std" ]
version = "^1.5.6"

[workspace.dependencies.serde]
features = [ "derive" ]
version = "^1.0.137"

[workspace.dependencies.serde_json]
version = "^1.0.81"

[workspace.dependencies.thiserror]
version = "^1.0.31"

[workspace.dependencies.uuid]
features = [ "v4" ]
version = "^1.1.2"
