[package]
name = "icicle-core"
version = "0.0.0"
edition = "2021"

[dependencies.gmp-sys]
path = "../gmp-sys"

[dependencies.libc]
version = "~0.2.125"

[dependencies.non-zero-ext]
path = "../non-zero-ext"

[dependencies.scope-exit]
path = "../scope-exit"

[dependencies.thiserror]
version = "^1.0.31"

[dependencies.typed-arena]
version = "^2.0.1"

[dev-dependencies.proptest]
version = "^1.0.0"
