[package]
name = "snowflake-actions"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
version = "^1.0.57"

[dependencies.os-ext]
path = "../common/os-ext"

[dependencies.libc]
version = "~0.2.125"

[dependencies.regex]
# Don't need Unicode support.
default-features = false
features = [ "perf", "std" ]
version = "^1.5.6"

[dependencies.scope-exit]
path = "../common/scope-exit"

[dependencies.snowflake-core]
path = "../snowflake-core"

[dependencies.snowflake-util]
path = "../snowflake-util"
