cargo-features = ["workspace-inheritance"]

[package]
name = "snowflake-actions"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
libc.workspace = true
os-ext.path = "../common/os-ext"
regex.workspace = true
scope-exit.path = "../common/scope-exit"
snowflake-core.path = "../snowflake-core"
snowflake-util.path = "../snowflake-util"
