cargo-features = ["workspace-inheritance"]

[package]
name = "snowflake-core"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
os-ext.path = "../common/os-ext"
serde.workspace = true
serde_json.workspace = true
snowflake-util.path = "../snowflake-util"
thiserror.workspace = true
uuid.workspace = true
