[package]
name = "snowflake"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
version = "^1.0.57"

[dependencies.bitflags]
version = "^1.3.2"

[dependencies.blake3_c_rust_bindings]
git = "https://github.com/BLAKE3-team/BLAKE3"
rev = "1.3.1"

[dependencies.os-ext]
path = "../common/os-ext"

[dependencies.libc]
version = "~0.2.125"

[dependencies.regex]
# Don't need Unicode support.
default-features = false
features = [ "perf", "std" ]
version = "^1.5.6"

[dependencies.scope-exit]
path = "../common/scope-exit"

[dependencies.sekka]
path = "../sekka"

[dependencies.thiserror]
version = "^1.0.31"
