cargo-features = ["workspace-inheritance"]

[package]
name = "snowflake"
version = "0.0.0"
edition = "2021"

[dependencies]
regex.workspace = true

[dependencies.os-ext]
path = "../common/os-ext"

[dependencies.scope-exit]
path = "../common/scope-exit"

[dependencies.snowflake-actions]
path = "../snowflake-actions"

[dependencies.snowflake-core]
path = "../snowflake-core"

[dependencies.snowflake-util]
path = "../snowflake-util"
