cargo-features = ["workspace-inheritance"]

[package]
name = "snowflake"
version = "0.0.0"
edition = "2021"

[dependencies]
os-ext.path = "../common/os-ext"
regex.workspace = true
snowflake-actions.path = "../snowflake-actions"
snowflake-core.path = "../snowflake-core"
snowflake-util.path = "../snowflake-util"
